--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студия</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
     <header class="header">
-      <a href="./index.html" class="logo"> Web<span class="studio">Studio</span> </a>
-      <nav >
+      <div class="container header"> 
+         <nav class="site-nav">
+      <a href="./index.html" class="logo">Web<span class="studio">Studio</span> </a>
         <ul class="site-nav-list">
           <li><a href="./index.html" class="nav-link-current">Студия</a></li>
           <li><a href="./portfolio.html" class="nav-link">Портфолио</a></li>
@@ -19,18 +21,23 @@
         </ul>
       </nav>
       <ul class="contacts">
-      <li><a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
-      <li><a href="tel:+380961111111" class="phone">+38 096 111 11 11</a></li>
+      <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+      <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
       </ul>
+      </div>
     </header>
+    
     <main >
       <section class="main-section">
+        <div class="container">
         <h1 class="main-title"> Эффективные решения для вашего бизнеса</h1>
         <button type="button" class="button" >Заказать услугу</button>
+        </div>
       </section>
 
-      <section>
-        <!-- <h2>Особености</h2> -->
+      <section class="features-section">
+        <div class="container">
+        <h2 class="title hidden">Особености</h2>
         <ul class="features">
           <li class="features-item"> <h3 class="features-title">Внимание к деталям</h3>
           <p class="features-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p></li>
@@ -41,51 +48,65 @@
           <li class="features-item"><h3 class="features-title"> Современные технологии</h3>
           <p class="features-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p></li>
         </ul>
+        </div>
       </section>
 
-      <section>
+      <section class="work-section">
+        <div class="container">
         <h2 class="title">Чем мы занимаемся</h2>
-
-        <ul >
+        <ul class="work-list">
           <li><img src="./image/photo_1.jpg" alt="написание кода" width="370" /></li>
           <li><img src="./image/photo_2.jpg" alt="создание интерфейса" width="370" /></li>
           <li><img src="./image/photo_3.jpg" alt="дизайн" width="370" /></li>
         </ul>
+        </div>
       </section>
 
       <section class="our-team-section">
+        <div class="container">
         <h2 class="title">Наша команда</h2>
         <ul class="our-team">
           <li class="team-item"><img src="./image/img_1.jpg" alt="Игорь Демьяненко" width="270" />
+            <div class="team-box">
           <h3 class="team-title">Игорь Демьяненко</h3>
           <p class="team-text">Product Designer</p>
+        </div>
         </li>
 
           <li class="team-item"><img src="./image/img_2.jpg" alt="Ольга Репина" width="270" />
+            <div class="team-box">
           <h3 class="team-title">Ольга Репина</h3>
           <p  class="team-text">Frontend Developer</p>
+        </div>
         </li>
 
           <li class="team-item"><img src="./image/img_3.jpg" alt="Николай Тарасов" width="270" />
+            <div class="team-box">
           <h3 class="team-title">Николай Тарасов</h3>
            <p class="team-text">Marketing</p>
+           </div>
         </li>
 
           <li class="team-item"><img src="./image/img_4.jpg" alt="Михаил Ермаков" width="270" />
+            <div class="team-box">
           <h3 class="team-title">Михаил Ермаков</h3>
            <p class="team-text">UI Designer</p>
+           </div>
         </li>
         </ul>
+        </div>
       </section>
       <footer class="footer">
-        <a href="./index.html" class="logo">Web<span class="footer-studio">Studio</span> </a>
+        <div class="container"> 
+        <a href="./index.html" class="logo footer-logo">Web<span class="footer-studio">Studio</span> </a>
         <address>
-          <ul class="contacts">
+          <ul class="footer-contacts">
           <li><a href="https://goo.gl/maps/DuqMqpGjKm9cCFHp8" target="_blank" rel="noopener, noindex, nofollow" class="location">г. Киев, пр-т Леси Украинки, 26</a></li>
-          <li><a href="mailto:info@example.com" class="footer-mail">info@example.com </a></li>
-          <li><a href="tel:+380961111111" class="footer-phone">+38 096 111 11 11</a></li>
+          <li><a href="mailto:info@example.com" class="footer-link">info@example.com </a></li>
+          <li><a href="tel:+380961111111" class="footer-link">+38 096 111 11 11</a></li>
         </ul>
         </address>
+        </div>
       </footer>
     </main>
   </body>
