--- a/portfolio.html
+++ b/portfolio.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфолио</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
+    <header class="header">
+        <div class="container header">
       <a href="./index.html" class="logo">Web<span class="studio">Studio</span> </a>
       <nav>
         <ul class="site-nav-list">
@@ -18,14 +20,16 @@
           <li><a href="" class="nav-link">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
-      <li><a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
-      <li><a href="tel:+380961111111" class="phone">+38 096 111 11 11</a></li>
+      <ul class="contacts">
+      <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+      <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
       </ul>
+      </div>
     </header>
     <main>
-        <section>
-          <!-- <h1>Портфолио</h1> -->  
+        <section class="project-section">
+            <div class="container">
+          <h1 class="title hidden">Портфолио</h1>  
           <ul class="portfolio-buttons">                         
         <li><button type="button" class="portfolio-button"> Все</button></li>
         <li><button type="button" class="portfolio-button">Веб-сайты</button></li> 
@@ -35,61 +39,100 @@
         </ul>                        
             <ul class="our-portfolio">
                 <li class="our-portfolio-item">
-                    <img src="image/website.jpg" alt="веб-сайт" width="370"> 
+                    <a href="" class="portfolio-link">
+                    <img src="image/website.jpg" alt="веб-сайт" width="370">
+                    <div class="project-box"> 
                         <h2 class="our-portfolio-title"> Технокряк</h2>
-                        <p class="our-portfolio-text"> Веб-сайт</p>                   
+                        <p class="our-portfolio-text"> Веб-сайт</p>
+                     </div> 
+                     </a>                     
                 </li>
                 <li class="our-portfolio-item">
-                    <img src="image/poster.jpg" alt="Постер" width="370">  
+                    <a href=""class="portfolio-link">
+                    <img src="image/poster.jpg" alt="Постер" width="370">
+                    <div class="project-box"> 
                         <h2 class="our-portfolio-title">Постер New Orlean vs Golden Star</h2>
-                        <p class="our-portfolio-text">Дизайн</p>                                         
+                        <p class="our-portfolio-text">Дизайн</p> 
+                     </div> 
+                    </a>                                           
                 </li>
                 <li class="our-portfolio-item">
+                    <a href=""class="portfolio-link">
                     <img src="image/restaurant.jpg" alt="ресторан" width="370">
+                    <div class="project-box">
                         <h2 class="our-portfolio-title">Ресторан Seafood </h2>                            
-                        <p class="our-portfolio-text">Приложение</p>                                                                       
+                        <p class="our-portfolio-text">Приложение</p> 
+                     </div>
+                    </a>
                 </li>
                 <li class="our-portfolio-item">
-                    <img src="image/prime.jpg" alt="прайм" width="370">  
+                  <a href=""class="portfolio-link"> 
+                    <img src="image/prime.jpg" alt="прайм" width="370">
+                    <div class="project-box"> 
                         <h2 class="our-portfolio-title">Проект Prime </h2>                          
-                         <p class="our-portfolio-text" p> Маркетинг</p>                                                                    
+                         <p class="our-portfolio-text" p> Маркетинг</p> 
+                      </div>
+                    </a>                                                                        
                 </li>
                 <li class="our-portfolio-item">
-                    <img src="image/boxes.jpg" alt="boxes" width="370">  
+                   <a href=""class="portfolio-link">
+                    <img src="image/boxes.jpg" alt="boxes" width="370">
+                    <div class="project-box"> 
                         <h2 class="our-portfolio-title">Проект Boxes </h2>
-                        <p class="our-portfolio-text">Приложение</p>                                                                    
+                        <p class="our-portfolio-text">Приложение</p>
+                     </div> 
+                    </a>                                                                        
                 </li>
                 <li class="our-portfolio-item">
-                    <img src="image/inspiration_has_no_borders.jpg" alt="вдохновение не имеет границ" width="370">  
+                    <a href=""class="portfolio-link">
+                    <img src="image/inspiration_has_no_borders.jpg" alt="вдохновение не имеет границ" width="370">
+                    <div class="project-box">  
                         <h2 class="our-portfolio-title"> Inspiration has no Borders  </h2>               
-                        <p class="our-portfolio-text">Веб-сайт </p>                                                                   
+                        <p class="our-portfolio-text">Веб-сайт </p> 
+                     </div> 
+                    </a>                                                                    
                 </li>
                 <li class="our-portfolio-item">
+                    <a href=""class="portfolio-link">
                     <img src="image/design.jpg" alt="дизайн книги" width="370">
+                    <div class="project-box">
                         <h2 class="our-portfolio-title">Издание Limited Edition </h2>                           
-                        <p class="our-portfolio-text">Дизайн</p>                                               
+                        <p class="our-portfolio-text">Дизайн</p>  
+                    </div>
+                 </a>                                                
                 </li>
                 <li class="our-portfolio-item">
-                    <img src="image/lab.jpg" alt="ярлык" width="370"> 
+                   <a href=""class="portfolio-link">
+                    <img src="image/lab.jpg" alt="ярлык" width="370">
+                    <div class="project-box"> 
                         <h2 class="our-portfolio-title">Проект LAB </h2>                           
-                        <p class="our-portfolio-text">Маркетинг</p>                                                    
+                        <p class="our-portfolio-text">Маркетинг</p>
+                    </div> 
+                </a>                                                       
                 </li>
                 <li class="our-portfolio-item">
-                    <img src="image/growing_business.jpg" alt="растущий бизнес" width="370">  
+                   <a href=""class="portfolio-link">
+                    <img src="image/growing_business.jpg" alt="растущий бизнес" width="370">
+                    <div class="project-box">  
                         <h2 class="our-portfolio-title">Growing Business</h2>                            
-                           <p class="our-portfolio-text"> Приложение</p>                                            
+                           <p class="our-portfolio-text"> Приложение</p>  
+                    </div>
+                 </a>                                                
                 </li>
             </ul>
+        </div>
         </section>
          <footer class="footer">
-            <a href="./index.html" class="logo">Web<span class="footer-studio">Studio</span> </a>
+             <div class="container"> 
+            <a href="./index.html" class="logo footer-logo">Web<span class="footer-studio">Studio</span> </a>
             <address>
-              <ul class="contacts">
+              <ul class="footer-contacts">
               <li><a href="https://goo.gl/maps/DuqMqpGjKm9cCFHp8" target="_blank" rel="noopener, noindex, nofollow" class="location">г. Киев, пр-т Леси Украинки, 26</a></li>
-              <li><a href="mailto:info@example.com" class="footer-mail">info@example.com </a></li>
-              <li><a href="tel:+380961111111" class="footer-phone">+38 096 111 11 11</a></li>
+              <li><a href="mailto:info@example.com" class="footer-link">info@example.com </a></li>
+              <li><a href="tel:+380961111111" class="footer-link">+38 096 111 11 11</a></li>
             </ul>
             </address>
+            </div>
           </footer>
     </main>
 </body>
