--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
       </section>
 
-      <section class="features-section">
+      <section class="section">
         <div class="container">
         <h2 class="title hidden">Особености</h2>
         <ul class="features">
@@ -51,7 +51,7 @@
         </div>
       </section>
 
-      <section class="work-section">
+      <section class=" section work-section">
         <div class="container">
         <h2 class="title">Чем мы занимаемся</h2>
         <ul class="work-list">
@@ -62,7 +62,7 @@
         </div>
       </section>
 
-      <section class="our-team-section">
+      <section class="section our-team-section">
         <div class="container">
         <h2 class="title">Наша команда</h2>
         <ul class="our-team">
@@ -96,6 +96,7 @@
         </ul>
         </div>
       </section>
+      </main>
       <footer class="footer">
         <div class="container"> 
         <a href="./index.html" class="logo footer-logo">Web<span class="footer-studio">Studio</span> </a>
@@ -108,6 +109,6 @@
         </address>
         </div>
       </footer>
-    </main>
+    
   </body>
 </html>
