--- a/portfolio.html
+++ b/portfolio.html
@@ -27,15 +27,15 @@
       </div>
     </header>
     <main>
-        <section class="project-section">
+        <section class="section project-section">
             <div class="container">
           <h1 class="title hidden">Портфолио</h1>  
           <ul class="portfolio-buttons">                         
-        <li><button type="button" class="portfolio-button"> Все</button></li>
-        <li><button type="button" class="portfolio-button">Веб-сайты</button></li> 
-        <li><button type="button" class="portfolio-button">Приложения</button> </li>
-        <li><button type="button" class="portfolio-button"> Дизайн</button></li>
-        <li><button type="button" class="portfolio-button">Маркетинг  </button> </li> 
+        <li class="button-item"><button type="button" class="portfolio-button"> Все</button></li>
+        <li class="button-item"><button type="button" class="portfolio-button">Веб-сайты</button></li> 
+        <li class="button-item"><button type="button" class="portfolio-button">Приложения</button> </li>
+        <li class="button-item"><button type="button" class="portfolio-button"> Дизайн</button></li>
+        <li class="button-item"><button type="button" class="portfolio-button">Маркетинг  </button> </li> 
         </ul>                        
             <ul class="our-portfolio">
                 <li class="our-portfolio-item">
@@ -122,6 +122,7 @@
             </ul>
         </div>
         </section>
+         </main>
          <footer class="footer">
              <div class="container"> 
             <a href="./index.html" class="logo footer-logo">Web<span class="footer-studio">Studio</span> </a>
@@ -134,6 +135,6 @@
             </address>
             </div>
           </footer>
-    </main>
+   
 </body>
 </html>
